--- a/assesment/assets/stylesheet/main.css
+++ b/assesment/assets/stylesheet/main.css
@@ -35,6 +35,20 @@ aside div:hover{
 	background: #FEC500;
 	color: #f1f1f1;
 }
+.wrapper{
+	margin-left: 120px;
+}
+.page-header{
+	padding: 10px;
+	padding-bottom: 20px;
+	background: #3d3d3d;
+	overflow-y: hidden !important;
+}
+.hearder-info{
+	color: #fff;
+	font-size: 15px;
+	margin-right: 25px;
+}
 .home-content{
 	width:100%;
 }
@@ -53,4 +67,47 @@ aside div:hover{
 }
 .logo{
 	margin: 40px 0 40px 10px;
+}
+.custom-counter{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+.custom-counter li{
+	counter-increment: step-counter;
+	margin-bottom: 10px;
+}
+.custom-counter li::before{
+	content:counter(step-counter);
+	margin-right: 5px;
+	font-size: 80%;
+	background-color: #3d3d3d;
+	color: #f0c419;
+	font-weight: bold;
+	padding: 3px 8px;
+	border-radius: 3px;
+}
+.home-article{
+	float: right;
+	margin-left: 500px;
+	margin-top: -750px;
+	position: relative;
+}
+.article-image{
+	display: block;
+	width: 100%;
+}
+.talent{
+	font-size: 4em;
+	color: #fff;
+	position: absolute;
+	bottom: 60px;
+	left: 20px;
+	padding: 20px;
+	background-color: rgb(0, 0, 0, .3);
+}
+.readmore{
+	position: absolute;
+	bottom: 20px; left: 20px;
+	padding: 10px 20px 10px 20px;
 }
